@@ -2,6 +2,9 @@ Revision history for Exobrain
 
 {{$NEXT}}
 
+    * FEATURE: Added a `exobrain debug` command for bus debugging.
+               This obsoletes the old `debug.pl` command.
+
 1.04      2014-02-28 23:18:32EST-0500 America/Montreal
 
     * FEATURE: Added a `exobrain setup` command to do basic exobrain/ubic setup.
